--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css " />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
 </head>
 
 <body>
@@ -48,21 +50,7 @@
 
         </div>
     </nav>
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-lg" style="padding:30px;">
-                <h3 style="color:lightgrey;">About us</h3>
-                <h1 style="margin-bottom:20px;"> <b>Lorem ipsum dolor sit amet.</b></h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-                    nostrum
-                    commodi, eligendi qui
-                    modi
-                    est odio. Eos hic beatae mollitia quibusdam voluptatem reprehenderit. Inventore dicta, sequi
-                    officiis
-                    iusto distinctio tempora!</p>
-            </div>
-        </div>
-    </div>
+
     <div class="container-fluid">
         <div class="row pozadina">
             <div class="container">
@@ -81,8 +69,111 @@
             </div>
         </div>
 
-    </div>
+        <div class="container">
+            <div class="row text-center my-5">
+                <div class="col-lg" style="padding:30px;">
+                    <h3 style="color:lightgrey;">About us</h3>
+                    <h1 style="margin-bottom:20px;"> <b>Lorem ipsum dolor sit amet.</b></h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+                        nostrum
+                        commodi, eligendi qui
+                        modi
+                        est odio. Eos hic beatae mollitia quibusdam voluptatem reprehenderit. Inventore dicta, sequi
+                        officiis
+                        iusto distinctio tempora!</p>
+                </div>
+            </div>
+        </div>
 
+
+        <div class="container-fluid">
+            <div class="row text-center my-5">
+                <div class="col-lg">
+                    <h3 style="color:lightgrey;">Our Services</h3>
+
+                    <h2>What we are good at</h2>
+                </div>
+
+            </div>
+        </div>
+        <div class="container">
+
+
+
+
+            <div class="row my-5">
+                <div class="box col-lg-4 text-center" style="width: 18rem;">
+
+                    <h5><i class="fas fa-book" style="font-size:40px; margin-bottom: 20px;"></i></h5>
+                    <h3>Web design</h3>
+                    <hr color="
+                            orange" style="width:30%;">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing Lorem ipsum dolor sit. </p>
+
+
+                </div>
+
+                <div class="box col-lg-4 text-center" style="width: 18rem;">
+
+                    <h5><i class="fas fa-database" style="font-size:40px; margin-bottom: 20px;"></i></h5>
+                    <h3>Database Managmant</h3>
+                    <hr color="
+                            orange" style="width:30%;">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing Lorem ipsum dolor sit. </p>
+
+
+                </div>
+
+                <div class="box col-lg-4 text-center" style="width: 18rem;">
+
+                    <h5><i class="fas fa-memory" style="font-size:40px; margin-bottom: 20px;"></i></h5>
+                    <h3>Web Development</h3>
+                    <hr color="
+                            orange" style="width:30%;">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing Lorem ipsum dolor sit. </p>
+
+
+                </div>
+
+                <div class="box col-lg-4 text-center" style="width: 18rem;">
+
+                    <h5><i class="fas fa-boxes" style="font-size:40px; margin-bottom: 20px;"></i></h5>
+                    <h3>Web Mobile</h3>
+                    <hr color="
+                            orange" style="width:30%;">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing Lorem ipsum dolor sit. </p>
+
+
+                </div>
+                <div class="box col-lg-4 text-center" style="width: 18rem;">
+
+                    <h5><i class="fas fa-taxi" style="font-size:40px; margin-bottom: 20px;"></i>
+                    </h5>
+                    <h3>Network Solution</h3>
+                    <hr color="
+                            orange" style="width:30%;">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing Lorem ipsum dolor sit. </p>
+
+
+                </div>
+                <div class="box col-lg-4 text-center" style="width: 18rem;">
+
+                    <h5><i class="fas fa-yin-yang" style="font-size:40px; margin-bottom: 20px;"></i></h5>
+                    <h3>Cloud Services</h3>
+                    <hr color="
+                            orange" style="width:30%;">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing Lorem ipsum dolor sit. </p>
+
+
+                </div>
+
+
+            </div>
+        </div>
+
+
+
+    </div>
 </body>
 
 </html>
