--- a/index.html
+++ b/index.html
@@ -32,37 +32,79 @@
             </div>   
         </div>
         <div class="row">
-           <div class="col-lg-3">
-                <img src="hero-macbook.png" class="img-fluid slika" alt="">
+           <div class="col-lg-3 slika">
+                <img src="portfolio-6.jpg" class="img-fluid slika" alt="">
                 <div class="overlay">
                     <div class="text">
-                        <h1>Item Name</h1>
+                        <h3>Item Name</h3>
                         <p>Something smart about the item</p>
                     </div>
                 </div>  
            </div>
-           <div class="col-lg-3">
-                <img src="hero-macbook.png" class="img-fluid slika" alt="">
+           <div class="col-lg-3 slika">
+                <img src="portfolio-6.jpg" class="img-fluid slika" alt="">
+                <div class="overlay">
+                        <div class="text">
+                            <h3>Item Name</h3>
+                            <p>Something smart about the item</p>
+                        </div>
+                    </div> 
            </div>
-           <div class="col-lg-3">
-                <img src="hero-macbook.png" class="img-fluid" alt="">
+           <div class="col-lg-3 slika">
+                <img src="portfolio-6.jpg" class="img-fluid" alt="">
+                <div class="overlay">
+                        <div class="text">
+                            <h3>Item Name</h3>
+                            <p>Something smart about the item</p>
+                        </div>
+                    </div> 
            </div>
-           <div class="col-lg-3">
-                <img src="hero-macbook.png" class="img-fluid" alt="">
+           <div class="col-lg-3 slika">
+                <img src="portfolio-6.jpg" class="img-fluid" alt="">
+                <div class="overlay">
+                        <div class="text">
+                            <h3>Item Name</h3>
+                            <p>Something smart about the item</p>
+                        </div>
+                    </div>   
            </div>
         </div>   
         <div class="row">
-                <div class="col-lg-3">
-                     <img src="hero-macbook.png" class="img-fluid" alt="">
+                <div class="col-lg-3 slika">
+                     <img src="portfolio-6.jpg" class="img-fluid" alt="">
+                     <div class="overlay">
+                            <div class="text">
+                                <h3>Item Name</h3>
+                                <p>Something smart about the item</p>
+                            </div>
+                        </div>      
                 </div>
-                <div class="col-lg-3">
-                     <img src="hero-macbook.png" class="img-fluid" alt="">
+                <div class="col-lg-3 slika">
+                     <img src="portfolio-6.jpg" class="img-fluid" alt="">
+                     <div class="overlay">
+                            <div class="text">
+                                <h3>Item Name</h3>
+                                <p>Something smart about the item</p>
+                            </div>
+                        </div>   
                 </div>
-                <div class="col-lg-3">
-                     <img src="hero-macbook.png" class="img-fluid" alt="">
+                <div class="col-lg-3 slika">
+                     <img src="portfolio-6.jpg" class="img-fluid" alt="">
+                     <div class="overlay">
+                            <div class="text">
+                                <h3>Item Name</h3>
+                                <p>Something smart about the item</p>
+                            </div>
+                        </div>   
                 </div>
-                <div class="col-lg-3">
-                     <img src="hero-macbook.png" class="img-fluid" alt="">
+                <div class="col-lg-3 slika">
+                     <img src="portfolio-6.jpg" class="img-fluid" alt="">
+                     <div class="overlay">
+                            <div class="text">
+                                <h3>Item Name</h3>
+                                <p>Something smart about the item</p>
+                            </div>
+                        </div>    
                 </div>
              </div> 
     </div>
